--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <title>Humble Bundle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
 
-    <div id="app"></div>
+    <dl id="contributor-list">
+      <dt>
+        <span>1.</span>
+        <span>Example</span>
+      </dt>
+      <dd>$50.00</dd>
+    </dl>
+
+    <form id="order-form">
+      <div id="order-form-radio-amount-selector">
+        <label>Pay What You Want!</label>
+        <button type="button" value=10 class="amount-button">$10</button>
+        <button type="button" value=15 class="amount-button">$15</button>
+        <button type="button" value=20 class="amount-button">$20</button>
+        <button type="button" value=25 class="amount-button">$25</button>
+        <button type="button" value=0 class="amount-button">Custom Amount</button>
+        <input type="text" name="custom-amount" class="custom-amount hidden">
+      </div>
+      <button type="submit">Buy Bundle!</button>
+    </form>
 
     <script src="js/bundle.js"></script>
   </body>
