added basic name functionality, js bundle mapping, and mild styling

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,9 @@
         <button type="button" value=0 class="amount-button">Custom Amount</button>
         <input type="text" name="custom-amount" class="custom-amount hidden">
       </div>
+      <div id="top-ten-contributor" class="hidden">
+        <input type="text" name="top-ten-name" >
+      </div>
       <button type="submit">Buy Bundle!</button>
     </form>
 
